--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.0",
     "express": "^4.19.0",
+    "express-rate-limit": "^7.5.1",
+    "googleapis": "^167.0.0",
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
